엑셀 read 까지 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,12 @@ spring.datasource.password=
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:initschema.sql
 spring.sql.init.data-locations=classpath:initdata.sql
+
+## initdata ????? ???
+spring.jpa.defer-datasource-initialization=true
+
+jpa.database-platform=org.hibernate.dialect.H2Dialect
+jpa.hibernate.ddl-auto=none
+jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+jpa.properties.hibernate.format_sql=true
+jpa.properties.hibernate.show_sql=true
