--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,11 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	testImplementation 'org.springframework.batch:spring-batch-test'
+	implementation group: 'org.apache.poi', name: 'poi', version: '5.2.5'
+	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.5'
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
 
 tasks.named('test') {
