엑셀 read 및 db insert 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.sql.init.schema-locations=classpath:initschema.sql
 spring.sql.init.data-locations=classpath:initdata.sql
 
 ## initdata ????? ???
-spring.jpa.defer-datasource-initialization=true
+##spring.jpa.defer-datasource-initialization=true
 
 jpa.database-platform=org.hibernate.dialect.H2Dialect
 jpa.hibernate.ddl-auto=none
